test/corpus/literals.txt
================================================================================
hex with unsigned suffix
================================================================================

local x = 0x1Fu;

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (identifier)
    (number)))

================================================================================
float with exponent
================================================================================

x = 1.5e-3;

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (number)))

================================================================================
string assignment
================================================================================

x = "hello";

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (identifier)
    (string)))

================================================================================
line and block comments around a statement
================================================================================

// leading
x = 1; /* trailing */

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (assignment_statement
    (identifier)
    (number))
  (block_comment))

================================================================================
empty string
================================================================================

local s = "";

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (identifier)
    (string)))

================================================================================
string with literal backslash (M1 has no escape sequences)
================================================================================

local s = "path\to\thing";

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (identifier)
    (string)))

================================================================================
backslash before quote does not escape it
================================================================================

local s = "ends here\";

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (identifier)
    (string)))

================================================================================
two strings in one expression stay separate
================================================================================

local s = System.StrCat("a", "b");

--------------------------------------------------------------------------------

(source_file
  (local_declaration
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string)
        (string)))))
